Fix form spacing s

--- a/dev/css/application.css
+++ b/dev/css/application.css
@@ -224,24 +224,31 @@ input[type="button"] {
   padding-left: 0.25em;
   padding-right: 0.25em;
   width: 100%;
-  max-width: 14em; }
+  max-width: 14em;
+  margin-bottom: 1em; }
 
 input[type="email"],
 input[type="text"],
 input[type="password"] {
   height: 3em;
   width: 100%;
-  max-width: 28em; }
+  max-width: 28em;
+  margin-bottom: 1em; }
 
 textarea {
   height: 21em;
   width: 100%;
-  max-width: 28em; }
+  max-width: 28em;
+  margin-bottom: 1em; }
 
 label,
 legend {
   display: block;
-  margin-bottom: .5rem; }
+  margin-bottom: 0.25em; }
+
+p.forgot {
+  position: relative;
+  top: -0.75em; }
 
 .garage-card .garage-text {
   -webkit-transition: all 0.5s ease;
